# priceSeeker

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
src/: data_fetcher.py
tests/: test_data_fetcher.py
