[project]
name = "priceseeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.24.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "streamlit>=1.41.1",
    "yfinance>=0.2.51",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
